(Client) Fix UI: bucket object list table + bucket list overflow

--- a/client/components/buckets/bucket-list/bucket-list.component.scss
+++ b/client/components/buckets/bucket-list/bucket-list.component.scss
@@ -1,5 +1,6 @@
 :host {
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 mat-nav-list {
     padding: 0;
