--- a/client/components/buckets/bucket-object-list/bucket-object-list.component.scss
+++ b/client/components/buckets/bucket-object-list/bucket-object-list.component.scss
@@ -2,9 +2,11 @@
     flex: 1;
     display: flex;
 }
+
 button {
     margin: 5px;
 }
+
 .mat-paginator-sticky {
     bottom: 0px;
     position: sticky;
@@ -24,24 +26,27 @@ button {
     justify-content: center;
 }
 
-tr.example-detail-row {
-    height: 0;
-}
-
-tr.example-element-row:not(.example-expanded-row):hover {
-    background: #f5f5f5;
-    cursor: pointer;
-}
-
-tr.example-element-row:not(.example-expanded-row):active {
-    background: #efefef;
-}
-
-.example-element-row td {
-    border-bottom-width: 0;
-}
-
-.example-element-detail {
-    overflow: hidden;
-    display: flex;
+table {
+    min-width: 100%;
+    tr.example-detail-row {
+        height: 0;
+    }
+    
+    tr.example-element-row:not(.example-expanded-row):hover {
+        background: #f5f5f5;
+        cursor: pointer;
+    }
+    
+    tr.example-element-row:not(.example-expanded-row):active {
+        background: #efefef;
+    }
+    
+    .example-element-row td {
+        border-bottom-width: 0;
+    }
+    
+    .example-element-detail {
+        overflow: hidden;
+        display: flex;
+    }
 }
